# scrop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  geometry.rs  main.rs  render.rs  style.rs
